--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1" ,
-    "start": "nodemon index"
+    "start": "node index"
   },
   "author": "FuckFace", 
   "license": "MIT",
